main grid added

--- a/wix.html
+++ b/wix.html
@@ -35,5 +35,70 @@
             
         </div>
     </header>
+    <div>
+        <div class="grid-container">
+            <div class="item1">
+                <h1>Getting Started</h1>
+                <p>How to Begin</p>
+                <p>Solving Technical Issues</p>
+                <p>Contacting Wix Customer Care</p>
+            </div>
+            <div class="item2">
+                <h1>The Wix Editor</h1>
+                <p>Editor Basics</p>
+                <p>Using Your Editor</p>
+                <p>Page Structure</p>
+            </div>
+            <div class="item3">
+                <h1>Editor X</h1>
+                <p>About Editor X</p>
+                <p>Using the Editor X Tools</p>
+                <p>Collaborating on an Editor X Site...</p>
+            </div>
+            <div class="item4">
+                <h1>Domains</h1>
+                <p>Domain Basics</p>
+                <p>Wix Domains</p>
+                <p>Domains Purchased Elsewhere</p>
+            </div>
+            <div class="item5">
+                <h1>Billing</h1>
+                <p>Premium Plans</p>
+                <p>Wix Domains</p>
+                <p>Google Workspace Business Emails</p>
+            </div>
+            <div class="item6">
+                <h1>Premium Plans</h1>
+                <p>Upgrading to a Premium Plan</p>
+                <p>Promotions & Vouchers</p>
+            </div>
+            <div class="item7">
+                <h1>Business Emails</h1>
+                <p>Business Email Basics</p>
+                <p>Connecting a Business Email...</p>
+                <p>Getting Started with Google...</p>
+            </div>
+            <div class="item8">
+                <h1>Ascend by Wix</h1>
+                <p>Ascend Plans</p>
+                <p>Wix Inbox</p>
+                <p>Wix Chat</p>
+            </div>
+            <div class="item9">9</div>
+            <div class="item10">10</div>
+            <div class="item11">11</div>
+            <div class="item12">12</div>
+            <div class="item13">13</div>
+            <div class="item14">14</div>
+            <div class="item15">15</div>
+            <div class="item16">16</div>
+            <div class="item17">17</div>
+            <div class="item18">18</div>
+            <div class="item19">19</div>
+            <div class="item20">20</div>
+
+        </div>
+
+    </div>
 </body>
 </html>
