--- a/wix.html
+++ b/wix.html
@@ -84,18 +84,77 @@
                 <p>Wix Inbox</p>
                 <p>Wix Chat</p>
             </div>
-            <div class="item9">9</div>
-            <div class="item10">10</div>
-            <div class="item11">11</div>
-            <div class="item12">12</div>
-            <div class="item13">13</div>
-            <div class="item14">14</div>
-            <div class="item15">15</div>
-            <div class="item16">16</div>
-            <div class="item17">17</div>
-            <div class="item18">18</div>
-            <div class="item19">19</div>
-            <div class="item20">20</div>
+            <div class="item9">
+                <h1>Managing Your Site</h1>
+                <p>Using Your Site Dashboard</p>
+                <p>Site Management</p>
+                <p>Roles & Permissions</p>
+            </div>
+            <div class="item10">
+                <h1>The Mobile Editor</h1>
+                <p>Getting Started</p>
+                <p>Mobile Tools</p>
+                <p>Pages on Mobile</p>
+            </div>
+            <div class="item11">
+                <h1>Managing Your Account</h1>
+                <p>Account Settings</p>
+                <p>Sign In Issues</p>
+            </div>
+            <div class="item12">
+                <h1>Performance and Technica...</h1>
+                <p>Site Performance</p>
+                <p>Editor Issues</p>
+                <p>Live Site Issues</p>
+            </div>
+            <div class="item13">
+                <h1>Wix Stores</h1>
+                <p>Setting Up Your Store</p>
+                <p>Managing Products and Collect...</p>
+                <p>Setting Up Shipping & Fulfill...</p>
+            </div>
+            <div class="item14">
+                <h1>SEO (Get Found on Google)</h1>
+                <p>Get Found on Google with SE...</p>
+                <p>SEO Page Settings</p>
+                <p>Page Content Optimization</p>
+            </div>
+            <div class="item15">
+                <h1>Marketing Tools</h1>
+                <p>Marketing Integrations & Tracki...</p>
+                <p>Multichannel Campaigns</p>
+                <p>Social Posts</p>
+            </div>
+            <div class="item16">
+                <h1>Wix Analytics</h1>
+                <p>Analytics Dashboard & Overvie...</p>
+                <p>Analytics Reports</p>
+                <p>Analytics Tools</p>
+            </div>
+            <div class="item17">
+                <h1>Managing Your Media</h1>
+                <p>Pro Gallery</p>
+                <p>Media Manager Basics</p>
+                <p>Adding and Uploading Media</p>
+            </div>
+            <div class="item18">
+                <h1>Site Members</h1>
+                <p>Setting Up a Members Area</p>
+                <p>Customizing Your Members Area...</p>
+                <p>Creating the Member Signup and...</p>
+            </div>
+            <div class="item19">
+                <h1>Wix Mobile Apps</h1>
+                <p>Mobile Apps Basics</p>
+                <p>Wix Owner App</p>
+                <p>Fit by Wix App</p>
+            </div>
+            <div class="item20">
+                <h1>Wix ADI</h1>
+                <p>ADI: Getting Started</p>
+                <p>ADI: Managing Your Site</p>
+                <p>ADI: Organizing Your Pages &...</p>
+            </div>
 
         </div>
 
