--- a/wix.html
+++ b/wix.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <script src="https://kit.fontawesome.com/11412e4a20.js" crossorigin="anonymous"></script>
-    <title image="images/Screen Shot 2022-01-20 at 17.37.24.png"> help center </title>
+    <title> help center | Wix.com</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="wix.css" type="text/css">
 </head>
 <body>
@@ -157,6 +158,9 @@
             </div>
 
         </div>
+        <button class="show-more-btn">Show More
+            <i class="fa fa-chevron-down "></i> 
+        </button>
 
     </div>
 </body>
