--- a/wix.html
+++ b/wix.html
@@ -161,7 +161,78 @@
         <button class="show-more-btn">Show More
             <i class="fa fa-chevron-down "></i> 
         </button>
+        <div class="bottom-grid-container">
+            <h2>Trending Topic</h2>
+        </div>
+        <ul class="ul-grid-container">
+            <li>
+                <h1>ARTICLE</h1>
+                <div>
+                <p>Purchasing a Domain from Wix</p>
+                <i class="fa fa-angle-right"></i>
+                </div>
+            </li>
+            <li>
+                <h1>ARTICLE</h1>
+                <div>
+                <p>Connecting a Domain Purchased Elsewhere</p>
+                <i class="fa fa-angle-right"></i>
+            </div>
+            </li>
+            <li>
+                <h1>ARTICLE</h1>
+                <div>
+                <p>Google Workspace: Purchasing a Personalized Business Email</p>
+                <i class="fa fa-angle-right"></i>
+            </div>
+            </li>
+            <li>
+                <h1>ARTICLE</h1>
+                <div>
+                <p>Hiring a Wix Partner</p>
+                <i class="fa fa-angle-right"></i>
+                </div>
+            </li>
+            <li>
+                <h1>ARTICLE</h1>
+                <div>
+                <p>Improving Your Online Presence with the Wix SEO Wiz</p>
+                <i class="fa fa-angle-right"></i>
+            </div>
+            </li>
+            <li>
+                <h1>ARTICLE</h1>
+                <div>
+                <p>Wix Editor: Publishing Your Site</p>
+                <i class="fa fa-angle-right"></i>
+            </div>
+            </li>
+            <li>
+                <h1>ARTICLE</h1>
+                <div>
+                <p>Wix Stores: Adding Wix Stores</p>
+                <i class="fa fa-angle-right"></i>
+            </div>
+            </li>
+            <li>
+                <h1>ARTICLE</h1>
+                <div>
+                <p>Accessibility: Checklist for Improving Your Site's Accessibility</p>
+                <i class="fa fa-angle-right"></i>
+            </div>
+            </li>
+        </ul>
 
     </div>
 </body>
+<footer class="footer">
+    <div>
+        <ul class="footer-content">
+            <li>PRODUCT</li>
+            <li>COMPANY</li>
+            <li>COMMUNITY</li>
+            <li>SUPPORT</li>
+        </ul>
+    </div>
+</footer>
 </html>
