--- a/wix.html
+++ b/wix.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <div class="sticky-header">
+        <div class="sticky-header one-edge-shadow">
+            <div class="nav"> 
             <img class="logo-img" src="images/Screen Shot 2022-01-23 at 12.42.22.png"/>
             <div class="nav-bar">
                 <ul class="menu">
@@ -22,6 +23,11 @@
                     <li>Support</li> 
                 </ul>
             </div>
+            </div>
+            <button class="profile">
+                <i class="fa fa-user-circle"></i>
+                Chana Makover
+            </button>
         </div>
         <div class="header">
             <div class="main-titles">
@@ -232,6 +238,9 @@
             <li>COMPANY</li>
             <li>COMMUNITY</li>
             <li>SUPPORT</li>
+            <li>
+                <img src="images/Screen Shot 2022-01-23 at 12.42.22.png">
+            </li>
         </ul>
     </div>
 </footer>
